[gd_scene load_steps=4 format=2]

[ext_resource path="res://TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://art/background.png" type="Texture" id=2]
[ext_resource path="res://otherassets/square_dynamicfont.tres" type="DynamicFont" id=3]

[node name="TitleScreen" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 56.0
margin_top = 44.0
margin_right = 980.0
margin_bottom = 556.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
script = ExtResource( 1 )
_sections_unfolded = [ "Anchor", "Grow Direction", "Hint", "Margin", "Mouse", "Rect", "Size Flags", "custom_fonts" ]

[node name="Button" type="Button" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 331.0
margin_top = 399.0
margin_right = 577.0
margin_bottom = 440.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Play Again"
flat = false
align = 1

[node name="Sprite" type="Sprite" parent="." index="1"]

position = Vector2( 458.618, 312.465 )
z_index = -1
texture = ExtResource( 2 )
_sections_unfolded = [ "Z Index" ]

[node name="RichTextLabel" type="RichTextLabel" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 209.0
margin_top = 255.0
margin_right = 684.0
margin_bottom = 355.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]You won! Thanks for playing![/center]
"
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "You won! Thanks for playing!
"
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "Anchor", "BBCode", "Margin", "Rect", "custom_colors", "custom_constants", "custom_fonts" ]

[node name="FontTween" type="Tween" parent="." index="3"]

repeat = true
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = true
playback/speed = 1.0

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]

[connection signal="tween_completed" from="FontTween" to="." method="_on_FontTween_tween_completed"]


